# practice-eventstoredb

./: Cargo.toml  README.md  compose.yaml
src/: main.rs
