[package]
name = "practice-eventstoredb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventstore = "2.2.0"
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
uuid = "1.3.3"
